# uz-plan-api

./: .air.toml  .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  groups.json  pyproject.toml  requirements.txt
.zed/: tasks.json
app/: main.py  models.py  utils.py
app/api/: deps.py  main.py
app/api/core/: exceptions.py  handlers.py  http_client.py  parser.py  scraper.py
app/api/routes/: groups.py  schedule.py
app/api/tests/core/: test_parser.py  test_scraper.py
app/api/tests/utils/: mock_html.py
app/clients/: http_client.py
app/config/: settings.py
app/core/: exceptions.py  handlers.py  http_client.py  parser.py  scraper.py
app/core/handlers/: exceptions.py  handlers.py
app/tests/: test_utils.py
app/tests/core/: test_parser.py  test_scraper.py
app/utils/: date.py  id.py
apps/api/: .gitignore  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  main.py
apps/api/app/clients/: redis_client.py
apps/api/app/config/: settings.py
apps/api/cmd/api/: main.go
apps/api/internal/database/: database.go
apps/api/internal/errs/: errs.go
apps/api/internal/schedule/: filter.go  model.go  predicate.go  redis_schedule_repository.go  schedule_handler.go  schedule_repository.go  schedule_service.go  scraper.go
apps/api/internal/scraper/: scraper.go
apps/web/: .cta.json  package-lock.json  package.json
cmd/api/: main.go
docs/: handler.go  openapi.yaml
internal/errs/: errs.go
internal/schedule/: domains.go  filter_test.go  model_test.go  redis_schedule_repository.go  scraper.go
scripts/: store_groups.py  store_groups.sh
tests/: conftest.py
tests/api/: test_deps.py
tests/core/: test_parser.py  test_scraper.py
tests/mocks/: mock_html.py
tests/utils/: mock_html.py  test_date.py  test_id.py  test_utils.py
