[project]
name = "uz-plan-api"
version = "0.1.0"
description = "FastAPI service for scraping and caching UZ schedule data using Redis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.135.1",
    "h2>=4.3.0",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.4",
]
